force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>A set of Questions to be used when interacting with Talent/Applications at the Validation and Internal Interview Stages for a particular Job Order</description>
    <label>Question</label>
    <nameField>
        <displayFormat>QUE-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>