force-app/main/default/objects/Question__c/fields/AcceptableValues__c.field-meta.xml
<CustomField>
    <fullName>AcceptableValues__c</fullName>
    <description>Stored as json; format is defined by RCE. Contains the Key+Value pairs used for User Input and Knockout Evaluation.</description>
    <label>Acceptable Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>