force-app/main/default/objects/Question__c/fields/AvailableForSubmittal__c.field-meta.xml
<CustomField>
    <fullName>AvailableForSubmittal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Copied from the related Question Template during Job Setup. Controls whether system includes the Question &amp; Response in the Validation or Internal Interview Summary fields. &apos;No&apos; prevents the Question from ever being added to an email template. &apos;Yes&apos; forces inclusion (Validation) or includes if a Response is present (Internal Interview).</description>
    <inlineHelpText>Yes, Response will be submitted to the client if present. No, Response will never be sent to the Client.</inlineHelpText>
    <label>Available for Submittal</label>
    <type>Checkbox</type>
</CustomField>