force-app/main/default/objects/Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Copied from the related Question Template during Job Setup. Categorizes the Question to help explain its relevant Interview style.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Client Feedback</fullName>
                <isActive>false</isActive>
                <label>Client Feedback</label>
            </value>
            <value>
                <fullName>General Questions</fullName>
                <isActive>false</isActive>
                <label>General Questions</label>
            </value>
            <value>
                <fullName>Intake General Questions</fullName>
                <isActive>false</isActive>
                <label>Intake General Questions</label>
            </value>
            <value>
                <fullName>Interview Details</fullName>
                <isActive>false</isActive>
                <label>Interview Details</label>
            </value>
            <value>
                <fullName>Interviewer (client)</fullName>
                <isActive>false</isActive>
                <label>Interviewer (client)</label>
            </value>
            <value>
                <fullName>Preference</fullName>
                <isActive>false</isActive>
                <label>Preference</label>
            </value>
            <value>
                <fullName>Skill Log</fullName>
                <isActive>false</isActive>
                <label>Skill Log</label>
            </value>
            <value>
                <fullName>Submission Notes</fullName>
                <isActive>false</isActive>
                <label>Submission Notes</label>
            </value>
            <value>
                <fullName>Talent response</fullName>
                <isActive>false</isActive>
                <label>Talent response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>