force-app/main/default/objects/Question__c/fields/JobOrder__c.field-meta.xml
<CustomField>
    <fullName>JobOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>JobQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>