force-app/main/default/objects/Question__c/fields/KnockOut__c.field-meta.xml
<CustomField>
    <fullName>KnockOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from the related Question Template during Job Setup. Controls whether a UI warning appears when a Yes/No Question is responded with &quot;No&quot;</description>
    <label>Knock Out</label>
    <type>Checkbox</type>
</CustomField>