force-app/main/default/objects/Question__c/fields/KnockOutOperation__c.field-meta.xml
<CustomField>
    <fullName>KnockOutOperation__c</fullName>
    <description>Determined by configuration during Job Setup. Part of &quot;Knock Out Conditions&quot;.</description>
    <label>Knock Out Operation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>