force-app/main/default/objects/Question__c/fields/KnockOutType__c.field-meta.xml
<CustomField>
    <fullName>KnockOutType__c</fullName>
    <description>Affects how the system should evaluate a Response against Knock Out Conditions. Preset based on the Question Template.</description>
    <label>Knock Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>