force-app/main/default/objects/Question__c/fields/KnockOutValue__c.field-meta.xml
<CustomField>
    <fullName>KnockOutValue__c</fullName>
    <description>Applicant Responses are evaluated against the Knock Out Value. Determined by configuration during Job Setup. Part of &quot;Knock Out Conditions&quot;.</description>
    <label>Knock Out Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>