force-app/main/default/objects/Question__c/fields/MandatoryToBeAsked__c.field-meta.xml
<CustomField>
    <fullName>MandatoryToBeAsked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from the related Question Template during Job Setup. Controls whether a Question is required to be Selected. Mandatory questions may not be deselected or removed by a user</description>
    <inlineHelpText>When checked, this Question is required to be displayed and answered at the Validation Stage.</inlineHelpText>
    <label>Mandatory to be Asked</label>
    <type>Checkbox</type>
</CustomField>