force-app/main/default/objects/Question__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Provided by the related Question Template during Job Setup. Determines the order of a Question after organizing all Questions by Stage, Category, and then Grouping</description>
    <label>Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>