force-app/main/default/objects/Question__c/fields/QuestionBankId__c.field-meta.xml
<CustomField>
    <fullName>QuestionBankId__c</fullName>
    <description>RCE&apos;s unique identifier. Specific to the Job Order and version of the Question. Used when Transcript/Responses are inserted into the system.</description>
    <externalId>true</externalId>
    <label>Question Bank Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>