force-app/main/default/objects/Question__c/fields/QuestionBankParentQuestion__c.field-meta.xml
<CustomField>
    <fullName>QuestionBankParentQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-referential lookup to an existing Question in R-One. Used to create Parent-Child relationships for Questions, especially on Job Setup, Validation, Internal Interview.</description>
    <label>Question Bank Parent Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Child questions</relationshipLabel>
    <relationshipName>ChildQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>