force-app/main/default/objects/Question__c/fields/QuestionBankParentQuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionBankParentQuestionId__c</fullName>
    <label>Question Bank Parent Question Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>