force-app/main/default/objects/Question__c/fields/QuestionBankTemplateName__c.field-meta.xml
<CustomField>
    <fullName>QuestionBankTemplateName__c</fullName>
    <description>RCE&apos;s name for the Question Template. May be reused within a Transcript.</description>
    <label>Question Bank Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>