force-app/main/default/objects/Question__c/fields/QuestionTemplate__c.field-meta.xml
<CustomField>
    <fullName>QuestionTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Question Template; provides all the Question details defined by Global Core.</description>
    <label>Question Template</label>
    <referenceTo>Question_Template__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>JobQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>