force-app/main/default/objects/Question__c/fields/QuestionTextEN__c.field-meta.xml
<CustomField>
    <fullName>QuestionTextEN__c</fullName>
    <description>Provided by the related Question Template during Job Setup. Presented during Pre-Screening. Question in English</description>
    <label>Question Text - EN</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>