force-app/main/default/objects/Question__c/fields/ResponseOptions__c.field-meta.xml
<CustomField>
    <fullName>ResponseOptions__c</fullName>
    <description>Provided by the related Question Template during Job Setup. Comma-delimited list of possible, mutually-exclusive options. An Interface interprets this to render a choice for the user (such as a picklist, radio button, menu)</description>
    <label>Response Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>