force-app/main/default/objects/Question__c/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <description>Provided by the related Question Template during Job Setup. Informs the Interface on how to present a question to a User as well as enables Knock Out functionality (Yes/No) or possible Response options (Picklist)</description>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <label>Yes/No</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Paragraph</fullName>
            </value>
            <value>
                <fullName>LongText</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
                <isActive>false</isActive>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>ComboBox</fullName>
                <isActive>false</isActive>
                <label>ComboBox</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Pill</fullName>
                <isActive>false</isActive>
                <label>Pill</label>
            </value>
            <value>
                <fullName>Time</fullName>
                <isActive>false</isActive>
                <label>Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>