force-app/main/default/objects/Question__c/fields/SelectedValue__c.field-meta.xml
<CustomField>
    <fullName>SelectedValue__c</fullName>
    <description>Selected Value	Allows Users to see the &quot;expected&quot; Knockout Qualification, such as &quot;at least 5 years&apos; experiences&quot;</description>
    <label>Selected Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>