force-app/main/default/objects/Question__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set during Job Setup by the system. Ensures Skill Variables are resolved using the correct, related Skill</description>
    <label>Skill</label>
    <referenceTo>TR1__Skills__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>