force-app/main/default/objects/Question__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Copied from the related Question Template during Job Setup. Controls whether the question should appear during the Validation or Internal Interview Stage (eg. ATS modal).</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Interview</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Client Interview</fullName>
            </value>
            <value>
                <fullName>Closing Report</fullName>
                <isActive>false</isActive>
                <label>Closing Report</label>
            </value>
            <value>
                <fullName>Intake</fullName>
                <isActive>false</isActive>
                <label>Intake</label>
            </value>
            <value>
                <fullName>Offer</fullName>
                <isActive>false</isActive>
                <label>Offer</label>
            </value>
            <value>
                <fullName>Proposed to Client</fullName>
                <isActive>false</isActive>
                <label>Proposed to Client</label>
            </value>
            <value>
                <fullName>Send Out</fullName>
                <isActive>false</isActive>
                <label>Send Out</label>
            </value>
            <value>
                <fullName>Submittal</fullName>
                <isActive>false</isActive>
                <label>Submittal</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
            <value>
                <fullName>Validation</fullName>
                <isActive>false</isActive>
                <label>Validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>