force-app/main/default/objects/Question__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Substage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>