force-app/main/default/objects/Question__c/fields/Talent_Question_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Talent_Question_Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Populated whenever a Question is created. Enables UPSERT functionality for other systems (eg. Transcoder with an RCE Transcript payload). Necessary because RCE retains the same &quot;Question Name&quot; for a Question even if a variable within the Question has changed; this may change the context of an Applicant&apos;s Responses.</description>
    <externalId>true</externalId>
    <label>Talent-Question Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>