force-app/main/default/objects/Question__c/fields/VariableSource__c.field-meta.xml
<CustomField>
    <fullName>VariableSource__c</fullName>
    <description>Helps the system decide which object to retrieve values from when resolving variables</description>
    <inlineHelpText>All variables within a Question must come from the same Variable Source</inlineHelpText>
    <label>Variable Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Job Order</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>